# rustmax

./: .gitignore  Cargo.toml  README.md  ci-build.sh  clippy-control.toml  deny.toml  deploy.sh  justfile  todo.md
crates/rmx/: Cargo.toml
crates/rmx-cli/: Cargo.toml
crates/rmx-cli/src/: books.rs  impls.rs  main.rs  moldman.rs  tools.rs
crates/rmx-prebuild/: Cargo.toml
crates/rmx-prebuild/src/: main.rs
crates/rmx/doc-src/: crate-ahash.md  crate-bitflags.md  root-docs.md
crates/rmx/src/: lib.rs
crates/rustmax/: Cargo.toml
crates/rustmax-anthology/: Cargo.toml  README.md
crates/rustmax-anthology/book/: book.toml
crates/rustmax-anthology/book/src/: README.md  SUMMARY.md  abstraction-without-overhead.md  five-lists-of-six-things.md  peeking-inside-trait-objects.md  rewriting-enjarify-in-rust.md  rust-and-csv-parsing.md  rust-for-functional-programmers.md  rust-from-scala.md  rust-means-never-close-socket.md  rust-ownership-hard-way.md  things-rust-shipped-without.md  understanding-over-guesswork.md  where-rust-really-shines.md
crates/rustmax-anthology/fetched/: index.html
crates/rustmax-anthology/fetched/abstraction-without-overhead/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/five-lists-of-six-things/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/peeking-inside-trait-objects/: content.md  extracted.html  fetch-info.toml
crates/rustmax-anthology/fetched/rewriting-enjarify-in-rust/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/rust-and-csv-parsing/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/rust-for-functional-programmers/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/rust-from-scala/: content.md  extracted.html  fetch-info.toml
crates/rustmax-anthology/fetched/rust-means-never-close-socket/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/rust-ownership-hard-way/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/things-rust-shipped-without/: content.md  extracted.html  fetch-info.toml  raw.html
crates/rustmax-anthology/fetched/understanding-over-guesswork/: content.md  extracted.html  fetch-info.toml
crates/rustmax-anthology/fetched/where-rust-really-shines/: content.md  extracted.html  fetch-info.toml
crates/rustmax-anthology/metadata/: posts.toml
crates/rustmax-anthology/src/: build.rs  extract.rs  fetch.rs  index.rs  lib.rs  main.rs  markdown.rs  metadata.rs
crates/rustmax-anthology/src/extractors/: default.rs  mod.rs
crates/rustmax-cli/: Cargo.toml  build.rs
crates/rustmax-cli/assets/: clippy-control.toml
crates/rustmax-cli/assets/template/: Cargo.toml.liquid
crates/rustmax-cli/src/: books.rs  impls.rs  library_gen.rs  main.rs  moldman.rs  rmxbook.rs  tools.rs  topics.rs
crates/rustmax-doctest/: Cargo.toml
crates/rustmax-doctest/src/: compile.rs  extract.rs  generate.rs  lib.rs  types.rs
crates/rustmax-prebuild/: Cargo.toml
crates/rustmax-prebuild/src/: feed.rs  highlight.rs  main.rs
crates/rustmax-rustdoc/: Cargo.toml  build.rs
crates/rustmax-rustdoc/assets/: rustmax-syntax.css  rustmax-themes.css
crates/rustmax-rustdoc/src/: lib.rs  output.rs  parse.rs  types.rs
crates/rustmax-rustdoc/src/render/: highlight.rs  item.rs  markdown.rs  mod.rs  module.rs  sidebar.rs  signature.rs
crates/rustmax-rustdoc/src/templates/: base.html  constant.html  enum.html  function.html  macro.html  module.html  sidebar.html  struct.html  (+3 more)
crates/rustmax/doc-src/: crate-ahash.md  crate-anyhow.md  crate-axum.md  crate-base64.md  crate-bitflags.md  crate-blake3.md  crate-bytes.md  crate-cfg-if.md  crate-chrono.md  crate-clap.md  crate-comrak.md  crate-cpal.md  crate-crossbeam.md  crate-ctrlc.md  crate-derive_more.md  crate-env_logger.md  crate-extension-trait.md  crate-flate2.md  crate-futures.md  crate-glob.md  crate-hex.md  crate-http.md  crate-hyper.md  crate-ignore.md  crate-image.md  crate-indicatif.md  crate-itertools.md  crate-jiff.md  crate-json5.md  crate-libc.md  crate-log.md  crate-memchr.md  crate-mime.md  crate-nom.md  crate-notify.md  crate-num-bigint.md  crate-num_enum.md  crate-powerletters.md  crate-proptest.md  crate-quote.md  (+28 more)
crates/rustmax/src/: lib.rs
crates/rustx/: Cargo.toml
crates/rustx-cli/: Cargo.toml
crates/rustx-cli/src/: impls.rs  main.rs
crates/rustx/doc-src/: crate-ahash.md  rustx-crate.md
crates/rustx/src/: doc.md  lib.rs
demoapp/: CLAUDE.md  Cargo.toml  DESIGN.md  ROADMAP.md
demoapp/src/: error.rs  lib.rs  main.rs
demoapp/src/cli/: commands.rs  mod.rs  repl.rs
demoapp/src/collection/: config.rs  document.rs  mod.rs  scanner.rs
demoapp/src/concurrency/: mod.rs
demoapp/src/crypto/: mod.rs
demoapp/src/export/: epub.rs  mod.rs
demoapp/src/features/: mod.rs
demoapp/src/feeds/: mod.rs
demoapp/src/remote/: mod.rs
demoapp/src/search/: mod.rs
demoapp/src/serve/: livereload.rs  mod.rs
demoapp/src/shortcode/: mod.rs
demoapp/src/text/: mod.rs
demoapp/src/time/: mod.rs
demoapp/src/util/: mod.rs
demoapp/templates/: default.html
demoapp/tests/: integration.rs
suite/: .gitignore  CLAUDE.md  COVERAGE_REPORT.md  Cargo.toml  DESIGN.md  README-coverage.md  README.md  RESULTS.md  ROUND4_RESULTS.md  ROUND5_SUMMARY.md  collect-dep-coverage.sh  justfile
suite/blog/: 001-from-tests-to-architecture.md  README.md
suite/src/: lib.rs  main.rs  main_backup.rs  main_original.rs
suite/src/cli/: commands.rs  mod.rs  repl.rs
suite/src/infrastructure/: config.rs  logging.rs  mod.rs  state.rs
suite/src/services/: analyzer.rs  builder.rs  formatter.rs  legacy.rs  mod.rs  runner.rs  scanner.rs
suite/src/web/: mod.rs  routes.rs  websocket.rs
suite/tests/: basic_tests.rs  dependency_coverage.rs  dependency_coverage_round2.rs  dependency_coverage_round3.rs  dependency_coverage_round4.rs  dependency_coverage_round5.rs  integration_tests.rs  simple_binary_tests.rs  tests.rs  tests.rs.disabled
(+127 files in other folders)
