[workspace.package]
description = "Rust Max"
version = "0.2.0"
license = "Apache-2.0 OR Apache-2.0 WITH LLVM-exception OR MIT OR CC0-1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
documentation = "https://github.com/brson/rmx"
edition = "2021"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/rmx",
  "crates/rmx-cli",
]
