[workspace.package]
description = "A collection of useful crates."
edition = "2024"
version = "0.0.5"
license = "Apache-2.0 OR Apache-2.0 WITH LLVM-exception OR MIT OR CC0-1.0"
authors = ["Brian Anderson <andersrb@gmail.com>"]
repository = "https://github.com/brson/rustmax"

[workspace]
resolver = "2"

members = [
  "crates/*",
]

default-members = [
  "crates/rustmax",
  "crates/rustmax-cli",
]

exclude = [
  "work/books/",
  "suite",
]

[profile.release]
overflow-checks = true
