[package]
name = "rustmax-suite"
edition = "2024"

[features]
test-mode = []

[dependencies]
rmx.path = "../crates/rustmax"
rmx.version = "0.0.5"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-max",
]

[[test]]                     
name = "rustmax-suite-tests"
path = "tests/tests.rs" 
