[package]
name = "rustmax-suite"
edition = "2024"

[features]
test-mode = []

[dependencies]
rmx.path = "../crates/rustmax"
rmx.version = "0.0.5"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-max",
]

[[test]]
name = "rustmax-suite-tests"
path = "tests/tests.rs"

[profile.coverage]
inherits = "dev"
opt-level = 0
lto = false
codegen-units = 1
debug = true
overflow-checks = true
incremental = false
