[package]
name = "rustmax-suite"
edition = "2024"
version = "0.1.0"

# Temporarily disabled due to tokio async runtime issues
# [[bin]]
# name = "rmx-suite"
# path = "src/bin/rmx-suite.rs"

# [[bin]]
# name = "rmx-suite-web"
# path = "src/bin/rmx-suite-web.rs"

[[bin]]
name = "rmx-suite-simple"
path = "src/bin/rmx-suite-simple.rs"

[features]
test-mode = []

[dependencies]
rmx.path = "../crates/rustmax"
rmx.version = "0.0.5"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-max",
]

# Disabled comprehensive tests until async binaries are fixed
# [[test]]
# name = "rustmax-suite-tests"
# path = "tests/tests.rs"

[[test]]
name = "simple-binary-tests"
path = "tests/simple_binary_tests.rs"

[profile.coverage]
inherits = "dev"
opt-level = 0
lto = false
codegen-units = 1
debug = true
overflow-checks = true
incremental = false
