[package]
name = "rmx-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rmx"
path = "src/main.rs"

[dependencies]
rmx.path = "../rmx"
rmx.package = "rmx"
rmx.default-features = false
rmx.features = [
  "rmx-profile-std",
  "rmx-feature-derive",
]
serde.version = "1"
enum-iterator.version = "2.1.0"
