[package]
name = "rmx"
version.workspace = true
license.workspace = true
edition.workspace = true

[features]

default = [
  #"rmx-profile-no-std",
  #"rmx-profile-std",
]


## ---------- ##

rmx-crates-no-std = [
  "ahash",
  "anyhow",
  "backtrace",
  "base64",
  "bitflags",
  "blake3",
  "byteorder",
  "bytes",
  "cfg-if",
  "chrono",
  "crossbeam",
  "derive_more",
  "extension-trait",
  "futures",
  "hex",
  "itertools",
  "jiff",
  "libc",
  "log",
  "nom",
  "num-bigint",
  "num_enum",
  "once_cell",
  "proptest",
  "rand",
  "rand_chacha",
  "rand_pcg",
  "serde",
  "serde_json",
  "sha2",
  "static_assertions",
  "toml",
]

rmx-crates-std = [
  "rmx-crates-no-std",
  "clap",
  "env_logger",
  "json5",
  "lazy_static",
  "num_cpus",
  "rayon",
  "regex",
  "tempfile",
  "tera",
  "thiserror",
  "unicode-segmentation",
  "walkdir",
  "xshell",
]

rmx-crates-net = [
  "rmx-crates-std",
  "http",
  "hyper",
  "hyper/full",
  "mime",
  "reqwest",
  "socket2",
  "tokio",
  "tokio/full",
  "url",
]

rmx-crates-cli = [
  "rmx-crates-std",
  "console",
  "ctrlc",
  "dialoguer",
  "indicatif",
  "termcolor",
  "rustyline",
]

rmx-crates-build-script = [
  "rmx-crates-std",
  "bindgen",
  "cc",
  "cxx",
  "cxx-build",
]

rmx-crates-proc-macro = [
  "rmx-crates-std",
  "proc-macro2",
  "quote",
  "syn",
]


## ---------- ##


rmx-profile-no-std = [
  "rmx-rustlibs-no-std",
  "rmx-feature-no-std",
  "rmx-crates-no-std",
]

rmx-profile-std = [
  "rmx-rustlibs-std",
  "rmx-feature-std",
  "rmx-feature-default",
  "rmx-crates-std",
]

rmx-profile-net = [
  "rmx-profile-std",
  "rmx-crates-net",
]

rmx-profile-cli = [
  "rmx-profile-std",
  "rmx-crates-cli",
]

rmx-profile-build-script = [
  "rmx-profile-std",
  "rmx-crates-build-script",
]

rmx-profile-proc-macro = [
  "rmx-profile-std",
  "rmx-rustlibs-proc-macro",
  "rmx-crates-proc-macro",
]

rmx-profile-full = [
  "rmx-profile-std",
  "rmx-profile-net",
  "rmx-profile-cli",
  "rmx-profile-build-script",
  "rmx-profile-proc-macro",
]

rmx-profile-max = [
  "rmx-profile-full",
  "rmx-feature-derive",
  "rmx-feature-serde",
  "rmx-feature-backtrace",
  "rmx-feature-tokio",
  "rmx-rand-x-small_rng",
  "rmx-serde-x-rc",
]

rmx-profile-max-nightly = [
  "rmx-profile-max",
  "rmx-feature-nightly",
]


## ---------- ##

rmx-feature-no-std = [
  "ahash/compile-time-rng",
  "byteorder/i128",
  "derive_more/full",
  "jiff/alloc",
  "serde_json/alloc",
]

rmx-feature-std = [
  "rmx-feature-no-std",
  "ahash/std",
  "anyhow/std",
  "backtrace/std",
  "base64/std",
  "bitflags/std",
  "blake3/std",
  "byteorder/std",
  "bytes/std",
  "chrono/std",
  "clap/std",
  "crossbeam/std",
  "cxx/std",
  "futures/std",
  "hex/std",
  "itertools/use_std",
  "jiff/std",
  "libc/std",
  "log/std",
  "nom/std",
  "num-bigint/std",
  "num_enum/std",
  "once_cell/std",
  "proc-macro2/proc-macro",
  "proptest/std",
  "rand/std",
  "rand/std_rng",
  "rand_chacha/std",
  "regex/std",
  "quote/proc-macro",
  "serde/std",
  "serde_json/std",
  "sha2/std",
]

rmx-feature-default = [
  "ahash/default",
  "bindgen/default",
  "byteorder/default",
  "chrono/clock", # can't use chrono/default because of RUSTSEC-2020-0071
  "clap/default",
  "console/default",
  "derive_more/default",
  "dialoguer/default",
  "futures/default",
  "indicatif/default",
  "jiff/default",
  "nom/default",
  "proc-macro2/default",
  "proptest/default",
  "quote/default",
  "regex/default",
  "reqwest/default",
  "rustyline/default",
  "serde/default",
  "serde_json/default",
  "sha2/default",
  "tera/default",
  "tokio/default",
  "toml/default",
  "url/default",
]

rmx-feature-derive = [
  "clap/derive",
  "serde/derive",
]

rmx-feature-serde = [
  "backtrace/serde",
  "bitflags/serde",
  "bytes/serde",
  "hex/serde",
  "jiff/serde",
  "log/serde",
  "rand/serde1",
  "rand_chacha/serde1",
  "rand_pcg/serde1",
  "num-bigint/serde",
  "url/serde",
]

rmx-feature-backtrace = [
  "rmx-feature-std",
  "anyhow/backtrace",
]

rmx-feature-tokio = [
  "indicatif/tokio",
]

rmx-feature-nightly = [
  "rand/nightly",
  "tempfile/nightly",
]


## ---------- ##


rmx-rand-x-small_rng = [
  "rand/small_rng",
]

rmx-serde-x-rc = [
  "serde/rc",
]


## ---------- ##


rmx-rustlibs-no-std = [
  "rmx-rustlib-core",
  "rmx-rustlib-alloc",
]

rmx-rustlibs-std = [
  "rmx-rustlib-core",
  "rmx-rustlib-alloc",
  "rmx-rustlib-std",
]

rmx-rustlibs-proc-macro = [
  "rmx-rustlib-proc_macro",
]

rmx-rustlib-core = []
rmx-rustlib-alloc = []
rmx-rustlib-std = []
rmx-rustlib-proc_macro = []


## ---------- ##


anyhow = ["dep:anyhow"]
# todo



[dependencies]
ahash = { version = "0.8.11", optional = true, default-features = false }
anyhow = { version = "1.0.94", optional = true, default-features = false }
backtrace = {version = "0.3.74", optional = true, default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false }
bindgen = { version = "0.71.1", optional = true, default-features = false }
bitflags = { version = "2", optional = true, default-features = false }
blake3 = { version = "1.5.5", optional = true, default-features = false }
byteorder = {version = "1.5.0", optional = true, default-features = false }
bytes = { version = "1.9.0", optional = true, default-features = false }
cc = { version = "1.2.5", optional = true, default-features = false }
cfg-if = { version = "1.0.0", optional = true, default-features = false }
chrono = { version = "0.4.39", optional = true, default-features = false }
clap = { version = "4.5.23", optional = true, default-features = false }
console = { version = "0.15.10", optional = true, default-features = false }
ctrlc = { version = "3.4.5", optional = true, default-features = false }
crossbeam = { version = "0.8.4", optional = true, default-features = false }
cxx = { version = "1.0.135", optional = true, default-features = false }
cxx-build = { version = "1.0.135", optional = true, default-features = false }
derive_more = { version = "1.0.0", optional = true, default-features = false }
dialoguer = { version = "0.11.0", optional = true, default-features = false }
env_logger = { version = "0.11.6", optional = true, default-features = false }
extension-trait = { version = "1.0.2", optional = true, default-features = false }
futures = { version = "0.3.31", optional = true, default-features = false }
http = { version = "1.2.0", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false }
hyper = { version = "1.5.2", optional = true, default-features = false }
indicatif = { version = "0.17.9", optional = true, default-features = false }
itertools = { version = "0.13.0", optional = true, default-features = false }
jiff = { version = "0.1.15", optional = true, default-features = false }
json5 = { version = "0.4.1", optional = true, default-features = false }
lazy_static = { version = "1.5.0", optional = true, default-features = false }
libc = { version = "0.2.169", optional = true, default-features = false }
log = { version = "0.4.22", optional = true, default-features = false }
mime = { version = "0.3.17", optional = true, default-features = false }
nom = { version = "7.1.3", optional = true, default-features = false }
num-bigint = { version = "0.4.6", optional = true, default-features = false }
num_cpus = { version = "1.16.0", optional = true, default-features = false }
num_enum = { version = "0.7.3", optional = true, default-features = false }
once_cell = { version = "1.20.2", optional = true, default-features = false }
proc-macro2 = { version = "1.0.92", optional = true, default-features = false }
proptest = { version = "1.6.0", optional = true, default-features = false }
quote = { version = "1.0.37", optional = true, default-features = false }
rand = { version = "0.8.5", optional = true, default-features = false }
rand_chacha = { version = "0.3.1", optional = true, default-features = false }
rand_pcg = { version = "0.3.1", optional = true, default-features = false }
rayon = { version = "1.10.0", optional = true, default-features = false }
regex = { version = "1.11.1", optional = true, default-features = false }
reqwest = { version = "0.12.9", optional = true, default-features = false }
rustyline = { version = "15.0.0", optional = true, default-features = false }
serde = { version = "1.0.216", optional = true, default-features = false }
serde_json = { version = "1.0.134", optional = true, default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }
socket2 = { version = "0.5.8", optional = true, default-features = false }
static_assertions = { version = "1.1.0", optional = true, default-features = false }
syn = { version = "2.0.91", optional = true, default-features = false }
tempfile = { version = "3.14.0", optional = true, default-features = false }
tera = { version = "1.20.0", optional = true, default-features = false }
termcolor = { version = "1.4.1", optional = true, default-features = false }
thiserror = { version = "2.0.9", optional = true, default-features = false }
tokio = { version = "1.42.0", optional = true, default-features = false }
toml = { version = "0.8.19", optional = true, default-features = false }
unicode-segmentation = { version = "1.12.0", optional = true, default-features = false }
url = { version = "2.5.4", optional = true, default-features = false }
walkdir = { version = "2.5.0", optional = true, default-features = false }
xshell = { version = "0.2.7", optional = true, default-features = false }
