[package]
name = "rustmax-anthology"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Curated collection of notable Rust blog posts and essays"

[[bin]]
name = "anthology"
path = "src/main.rs"

[dependencies]
rmx.path = "../rustmax"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-net",
  "rmx-feature-derive",
]

serde.version = "1"
clap.version = "4"
scraper.version = "0.22"
html2md.version = "0.2"
