[package]
name = "rustmax-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[[bin]]
name = "rustmax"
path = "src/main.rs"

[dependencies]
rmx.path = "../rustmax"
rmx.version = "0.0.6"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-net",
  "rmx-feature-derive",
]
serde.version = "1"
enum-iterator.version = "2.1.0"
regex.version = "1"
toml.version = "0.8"
