[package]
name = "rustmax-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true
include = ["src/**/*", "assets/**/*", "Cargo.toml", "build.rs"]

[[bin]]
name = "rustmax"
path = "src/main.rs"

[dependencies]
rmx.path = "../rustmax"
rmx.version = "0.0.7"
rmx.package = "rustmax"
rmx.default-features = false
rmx.features = [
  "rmx-profile-net",
  "rmx-feature-derive",
]
rustmax-doctest.path = "../rustmax-doctest"
rustmax-doctest.version = "0.0.7"
rustmax-rustdoc.path = "../rustmax-rustdoc"
rustmax-rustdoc.version = "0.0.7"
serde.version = "1"
enum-iterator.version = "2.1.0"
regex.version = "1"
toml.version = "0.8"
comrak.version = "0.39"
syntect.version = "5"
include_dir.version = "0.7"
