[package]
name = "rustmax-doctest"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Doctest runner for rustmax crate examples"

[dependencies]
rmx.path = "../rustmax"
rmx.version = "0.0.8"
rmx.package = "rustmax"
rmx.features = ["rmx-profile-max"]
pulldown-cmark.version = "0.12"
