[package]
name = "rustmax-prebuild"
publish = false
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rustmax-prebuild"
path = "src/main.rs"

[dependencies]
anyhow.version = "1"
clap.version = "4.5.23"
json5.version = "0.4.1"
regex.version = "1.11.1"
serde.version = "1"
serde.features = ["derive"]
tera.version = "1.20.0"
toml.version = "0.9.0"
comrak.version = "0.39.1"
