[package]
name = "rustmax"
edition.workspace = true
version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description.workspace = true

[package.metadata.docs.rs]

features = ["rmx-profile-max"]


[features]

default = []


## ---------- ##


rmx-crates-no-std = [
  "ahash",
  "anyhow",
  "backtrace",
  "base64",
  "bitflags",
  "blake3",
  "byteorder",
  "bytes",
  "cfg-if",
  "chrono",
  "crossbeam",
  "derive_more",
  "extension-trait",
  "futures",
  "hex",
  "itertools",
  "jiff",
  "libc",
  "log",
  "nom",
  "num-bigint",
  "num_enum",
  "rand",
  "rand_chacha",
  "rand_pcg",
  "semver",
  "serde",
  "serde_json",
  "sha2",
  "static_assertions",
  "toml",
]

rmx-crates-std = [
  "rmx-crates-no-std",
  "clap",
  "env_logger",
  "json5",
  "num_cpus",
  "proptest",
  "rayon",
  "regex",
  "tempfile",
  "tera",
  "thiserror",
  "unicode-segmentation",
  "walkdir",
  "xshell",
]

rmx-crates-net = [
  "rmx-crates-std",
  "axum",
  "http",
  "hyper",
  "mime",
  "reqwest",
  "socket2",
  "tokio",
  "tower",
  "url",
]

rmx-crates-cli = [
  "rmx-crates-std",
  "ctrlc",
  "termcolor",
  "rustyline",
]

rmx-crates-build-script = [
  "rmx-crates-std",
  "bindgen",
  "cc",
  "cxx",
  "cxx-build",
]

rmx-crates-proc-macro = [
  "rmx-crates-std",
  "proc-macro2",
  "quote",
  "syn",
]


## ---------- ##


rmx-profile-no-std = [
  "rmx-rustlibs-no-std",
  "rmx-feature-no-std",
  "rmx-crates-no-std",
]

rmx-profile-std = [
  "rmx-rustlibs-std",
  "rmx-feature-std",
  "rmx-feature-default",
  "rmx-feature-more",
  "rmx-crates-std",
]

rmx-profile-net = [
  "rmx-profile-std",
  "rmx-crates-net",
]

rmx-profile-cli = [
  "rmx-profile-std",
  "rmx-crates-cli",
]

rmx-profile-build-script = [
  "rmx-profile-std",
  "rmx-crates-build-script",
]

rmx-profile-proc-macro = [
  "rmx-profile-std",
  "rmx-rustlibs-proc-macro",
  "rmx-crates-proc-macro",
]

rmx-profile-full = [
  "rmx-profile-std",
  "rmx-profile-net",
  "rmx-profile-cli",
  "rmx-profile-build-script",
  "rmx-profile-proc-macro",
]

rmx-profile-max = [
  "rmx-profile-full",
  "rmx-feature-derive",
  "rmx-feature-serde",
  "rmx-feature-backtrace",
  "rmx-feature-tokio",
]

rmx-profile-max-nightly = [
  "rmx-profile-max",
  "rmx-feature-nightly",
]


## ---------- ##


rmx-feature-no-std = [
  "ahash?/compile-time-rng",
  "byteorder?/i128",
  "derive_more?/full",
  "jiff?/alloc",
  "serde_json?/alloc",
]

rmx-feature-std = [
  "rmx-feature-no-std",
  "ahash?/std",
  "anyhow?/std",
  "backtrace?/std",
  "base64?/std",
  "bitflags?/std",
  "blake3?/std",
  "byteorder?/std",
  "bytes?/std",
  "chrono?/std",
  "clap?/std",
  "crossbeam?/std",
  "cxx?/std",
  "derive_more?/std",
  "futures?/std",
  "hex?/std",
  "itertools?/use_std",
  "jiff?/std",
  "libc?/std",
  "log?/std",
  "nom?/std",
  "num-bigint?/std",
  "num_enum?/std",
  "proc-macro2?/proc-macro",
  "proptest?/std",
  "rand?/std",
  "rand?/std_rng",
  "rand_chacha?/std",
  "regex?/std",
  "quote?/proc-macro",
  "semver?/std",
  "serde?/std",
  "serde_json?/std",
  "sha2?/std",
]

rmx-feature-default = [
  "ahash?/default",
  "axum?/default",
  "bindgen?/default",
  "byteorder?/default",
  "chrono?/default",
  "clap?/default",
  "derive_more?/default",
  "env_logger?/default",
  "futures?/default",
  "jiff?/default",
  "nom?/default",
  "proc-macro2?/default",
  "proptest?/default",
  "quote?/default",
  "regex?/default",
  "reqwest?/default",
  "rustyline?/default",
  "semver?/std",
  "serde?/default",
  "serde_json?/default",
  "sha2?/default",
  "tera?/default",
  "tokio?/default",
  "toml?/default",
  "url?/default",
]

# non-default features that we turn on by default for convenience
rmx-feature-more = [
  "hyper?/full",
  "rand?/thread_rng",
  "reqwest?/blocking",
  "reqwest?/json",
  "serde?/rc",
  "tokio?/full",
  "tower?/full",
]

rmx-feature-derive = [
  "clap?/derive",
  "serde?/derive",
]

rmx-feature-serde = [
  "backtrace?/serde",
  "bitflags?/serde",
  "bytes?/serde",
  "hex?/serde",
  "jiff?/serde",
  "log?/serde",
  "rand?/serde",
  "rand_chacha?/serde",
  "rand_pcg?/serde",
  "semver?/serde",
  "num-bigint?/serde",
  "url?/serde",
]

rmx-feature-backtrace = [
  "rmx-feature-std",
  "anyhow?/backtrace",
]

rmx-feature-tokio = [
]

rmx-feature-nightly = [
  "rand?/nightly",
  "tempfile?/nightly",
]


## ---------- ##


rmx-rustlibs-no-std = [
  "rmx-rustlib-core",
  "rmx-rustlib-alloc",
]

rmx-rustlibs-std = [
  "rmx-rustlib-core",
  "rmx-rustlib-alloc",
  "rmx-rustlib-std",
]

rmx-rustlibs-proc-macro = [
  "rmx-rustlib-proc_macro",
]

rmx-rustlib-core = []
rmx-rustlib-alloc = []
rmx-rustlib-std = []
rmx-rustlib-proc_macro = []


## ---------- ##




[dependencies]
ahash = { version = "0.8.11", optional = true, default-features = false }
anyhow = { version = "1.0.94", optional = true, default-features = false }
axum = { version = "0.8.4", optional = true, default-features = false }
backtrace = {version = "0.3.74", optional = true, default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false }
bindgen = { version = "0.72.0", optional = true, default-features = false }
bitflags = { version = "2", optional = true, default-features = false }
blake3 = { version = "1.5.5", optional = true, default-features = false }
byteorder = {version = "1.5.0", optional = true, default-features = false }
bytes = { version = "1.9.0", optional = true, default-features = false }
cc = { version = "1.2.5", optional = true, default-features = false }
cfg-if = { version = "1.0.0", optional = true, default-features = false }
chrono = { version = "0.4.39", optional = true, default-features = false }
clap = { version = "4.5.23", optional = true, default-features = false }
ctrlc = { version = "3.4.5", optional = true, default-features = false }
crossbeam = { version = "0.8.4", optional = true, default-features = false }
cxx = { version = "1.0.135", optional = true, default-features = false }
cxx-build = { version = "1.0.135", optional = true, default-features = false }
derive_more = { version = "2.0.1", optional = true, default-features = false }
env_logger = { version = "0.11.6", optional = true, default-features = false }
extension-trait = { version = "1.0.2", optional = true, default-features = false }
futures = { version = "0.3.31", optional = true, default-features = false }
http = { version = "1.2.0", optional = true, default-features = false }
hex = { version = "0.4.3", optional = true, default-features = false }
hyper = { version = "1.6.0", optional = true, default-features = false }
itertools = { version = "0.14.0", optional = true, default-features = false }
jiff = { version = "0.2.1", optional = true, default-features = false }
json5 = { version = "0.4.1", optional = true, default-features = false }
libc = { version = "0.2.169", optional = true, default-features = false }
log = { version = "0.4.22", optional = true, default-features = false }
mime = { version = "0.3.17", optional = true, default-features = false }
nom = { version = "8.0.0", optional = true, default-features = false }
num-bigint = { version = "0.4.6", optional = true, default-features = false }
num_cpus = { version = "1.16.0", optional = true, default-features = false }
num_enum = { version = "0.7.3", optional = true, default-features = false }
proc-macro2 = { version = "1.0.92", optional = true, default-features = false }
proptest = { version = "1.6.0", optional = true, default-features = false }
quote = { version = "1.0.37", optional = true, default-features = false }
rand = { version = "0.9.0", optional = true, default-features = false }
rand_chacha = { version = "0.9.0", optional = true, default-features = false }
rand_pcg = { version = "0.9.0", optional = true, default-features = false }
rayon = { version = "1.10.0", optional = true, default-features = false }
regex = { version = "1.11.1", optional = true, default-features = false }
reqwest = { version = "0.12.22", optional = true, default-features = false }
rustyline = { version = "16.0.0", optional = true, default-features = false }
semver = { version = "1.0.24", optional = true, default-features = false }
serde = { version = "1.0.216", optional = true, default-features = false }
serde_json = { version = "1.0.134", optional = true, default-features = false }
sha2 = { version = "0.10.8", optional = true, default-features = false }
socket2 = { version = "0.6.0", optional = true, default-features = false }
static_assertions = { version = "1.1.0", optional = true, default-features = false }
syn = { version = "2.0.91", optional = true, default-features = false }
tempfile = { version = "3.14.0", optional = true, default-features = false }
tera = { version = "1.20.0", optional = true, default-features = false }
termcolor = { version = "1.4.1", optional = true, default-features = false }
thiserror = { version = "2.0.9", optional = true, default-features = false }
tokio = { version = "1.42.0", optional = true, default-features = false }
toml = { version = "0.9.0", optional = true, default-features = false }
tower = { version = "0.5.2", optional = true, default-features = false }
unicode-segmentation = { version = "1.12.0", optional = true, default-features = false }
url = { version = "2.5.4", optional = true, default-features = false }
walkdir = { version = "2.5.0", optional = true, default-features = false }
xshell = { version = "0.2.7", optional = true, default-features = false }


# Indirect dependencies we want to control versions for

# build failure in minimum-version build
_gcc = { package = "gcc", version = "0.3.55", optional = true, default-features = false }
