[package]
name = "rustx-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rustx"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
serde = { version = "1.0.152", features = ["derive"] }
xshell = "0.2.3"
