[package]
name = "rustx-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rustx"
path = "src/main.rs"

[dependencies]
rustx.path = "../rustx"
rustx.default-features = false
rustx.features = [
  "rx-feature-std",
  "rx-feature-derive",
  "anyhow",
  "clap",
  "serde",
  "xshell",
]
serde.version = "1"
