[package]
name = "rustx-cli"
version.workspace = true
license.workspace = true
edition.workspace = true

[[bin]]
name = "rustx"
path = "src/main.rs"

[dependencies]
rx.path = "../rustx"
rx.package = "rustx"
rx.default-features = false
rx.features = [
  "rx-profile-std",
  "rx-feature-derive",
]
serde.version = "1"
enum-iterator.version = "1.5.0"
